CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
# ADD_LIBRARY(practice SHARED ${CURRENT_DIR_SRCS})
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
# TARGET_LINK_LIBRARIES(practice pthread)

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/practice)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/practice COPYONLY)
ENDFOREACH()

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/practice
    FILES_MATCHING
    PATTERN "*.h"
    PATTERN "*.hpp"
    PATTERN "CMakeLists.txt" EXCLUDE
    )

# INSTALL(TARGETS practice
#     ARCHIVE DESTINATION lib
#     LIBRARY DESTINATION lib
#     RUNTIME DESTINATION bin)
