CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
ADD_LIBRARY(rule_applicator ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(rule_applicator PRIVATE ${PROJECT_INCLUDE_DIR})

INSTALL(TARGETS rule_applicator DESTINATION lib)

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/rule_applicator)
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/rule_applicator COPYONLY)
ENDFOREACH()
