CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
# ADD_LIBRARY(safe_vector SHARED ${CURRENT_DIR_SRCS})
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
# TARGET_LINK_LIBRARIES(safe_vector pthread)

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/safe_vector)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/safe_vector COPYONLY)
ENDFOREACH()

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/safe_vector
    FILES_MATCHING
    PATTERN "*.h"
    PATTERN "*.hpp"
    PATTERN "CMakeLists.txt" EXCLUDE
    )

# INSTALL(TARGETS safe_vector
#     ARCHIVE DESTINATION lib
#     LIBRARY DESTINATION lib
#     RUNTIME DESTINATION bin)
